# bazel-mfe

./: .bazelignore  BUILD.bazel  WORKSPACE  pnpm-lock.yaml  pnpm-workspace.yaml
header/: BUILD.bazel  package.json  tsconfig.json  webpack.config.js
header/src/: App.tsx
header/src/Components/: Header.tsx
host/: BUILD.bazel  package.json  webpack.config.js
host/src/: App.tsx
